--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,10 +37,15 @@ main {
   margin: 0 auto;
   padding: 0 15px;
 }
-
+button{
+  background: transparent;
+  border: none;
+  outline: none;
+}
 input, select {
   background: #fff;
   border: 1px solid #d6d6d6;
+  outline: none;
   color: #343434;
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
   font-size: 14px;
@@ -59,3 +64,8 @@ input, select {
 ***************************************/
 @import "layout/header";
 @import "layout/footer";
+
+/**************************************
+             Blocks Styles
+***************************************/
+@import "blocks/subscribe";
