--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,6 @@
 /**************************************
              Default Styles
 ***************************************/
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
 //@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 //@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300;400;500;600;700&display=swap');
 //////@import "vendor/bootstrap";
@@ -58,7 +57,32 @@ input, select {
   display: block;
   border-radius: 8px;
 }
-
+.section{
+  &-title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .h2{
+      font-size: 25px;
+      font-weight: 300;
+      text-transform: uppercase;
+      display: inline-block;
+      vertical-align: middle;
+      line-height: 30px;
+      padding: 0 25px 0 0;
+      &:after{
+        content: '\\';
+        display: inline-block;
+        color: rgba(179, 179, 179, 0.5);
+        line-height: 30px;
+        margin: 0 0 0 26px;
+      }
+    }
+  }
+  &-more{
+    color: #fc6519;
+  }
+}
 /**************************************
              Layout Styles
 ***************************************/
@@ -68,4 +92,5 @@ input, select {
 /**************************************
              Blocks Styles
 ***************************************/
+@import "blocks/blog";
 @import "blocks/subscribe";
