--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -95,6 +95,7 @@ input, select {
 /**************************************
              Blocks Styles
 ***************************************/
+@import "blocks/categories";
 @import "blocks/advantages";
 @import "blocks/blog";
 @import "blocks/subscribe";
