--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -96,6 +96,7 @@ input, select {
              Blocks Styles
 ***************************************/
 @import "blocks/categories";
+@import "blocks/products";
 @import "blocks/advantages";
 @import "blocks/blog";
 @import "blocks/subscribe";
