--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -97,6 +97,7 @@ input, select {
 ***************************************/
 @import "blocks/categories";
 @import "blocks/products";
+@import "blocks/reviews";
 @import "blocks/advantages";
 @import "blocks/blog";
 @import "blocks/subscribe";
