--- a/src/scss/blocks/blog.scss
+++ b/src/scss/blocks/blog.scss
@@ -1,6 +1,6 @@
 .blog{
   background: #f6f6f6;
-  padding: 20px 0;
+  padding: 45px 0 15px;
 &-list{
   display: flex;
   justify-content: space-between;
