--- a/src/scss/blocks/homeSlider.scss
+++ b/src/scss/blocks/homeSlider.scss
@@ -57,13 +57,7 @@
     color: #EA6E34;
   }
 }
-:root{
-  --swiper-navigation-sides-offset:25px;
-  --swiper-pagination-bullet-height:12px;
-  --swiper-pagination-bullet-width:12px;
-  --swiper-pagination-bullet-horizontal-gap:8px;
-  --swiper-pagination-color: #EA6E34;
-}
+
 .swiper-button{
   width: 40px;
   height: 40px;
@@ -80,4 +74,10 @@
 }
 .swiper-pagination-bullet{
   cursor: pointer;
+  transition: var(--transition);
+
+  &:hover{
+    background: #EA6E34;
+    opacity: 1;
+  }
 }
