--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -360,6 +360,9 @@
         z-index: 9999;
         top: 20px;
         display: none;
+        @media screen  and(max-width: 1800px){
+          margin-left: -41vw;
+        }
         &.active{
           display: block;
         }
