--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,7 +66,7 @@ input, textarea, select {
   }
 }
 
- .btn {
+.btn {
   text-align: center;
   vertical-align: top;
   font-weight: 500;
@@ -168,7 +168,8 @@ input, textarea, select {
   align-items: stretch;
   background: #fff;
   min-height: 350px;
-  &-popup-shadow{
+
+  &-popup-shadow {
     min-width: 921px;
   }
 
@@ -295,27 +296,51 @@ input, textarea, select {
   overflow: scroll;
   height: 100%;
 }
-.jq-selectbox{
+
+.jq-selectbox {
   background: #fff;
   border: 1px solid #d6d6d6;
   outline: 0;
   color: #343434;
-  font-family: Montserrat,Arial,Helvetica,sans-serif;
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 19px;
   font-weight: 500;
   letter-spacing: 1px;
   text-transform: uppercase;
-  padding: 9px 20px 9px 8px;
+  padding: 0;
   width: 100%;
   display: block;
   border-radius: 8px;
   transition: var(--transition);
   position: relative;
-  select{
+
+  .jq-selectbox__select {
+    padding: 9px 20px 9px 8px;
+    cursor: pointer;
+  }
+
+  select {
     display: none;
   }
-  &::before{
+
+  li {
+    transition: 0.3s;
+    border-radius: 8px;
+    cursor: pointer;
+
+    &.sel {
+      background: #fc6519;
+      color: #fff;
+    }
+
+    &:hover {
+      background: #e8e8e8;
+      color: #343434;
+    }
+  }
+
+  &::before {
     content: '';
     position: absolute;
     width: 10px;
@@ -328,26 +353,29 @@ input, textarea, select {
   }
 
 
-.jq-selectbox__dropdown {
-  position: absolute;
-  height: auto;
-  top: 36px !important;
-  bottom: auto !important;
-  left: 0 !important;
-  width: 100% !important;
-  border: 1px solid #d6d6d6 !important;
-  background: #fff;
-  border-radius: 8px;
-  ul{
-    padding: 0;
-    margin: 0;
-    li{
-      padding: 8px 9px;
+  .jq-selectbox__dropdown {
+    position: absolute;
+    height: auto;
+    top: 36px !important;
+    bottom: auto !important;
+    left: 0 !important;
+    width: 100% !important;
+    border: 1px solid #d6d6d6 !important;
+    background: #fff;
+    border-radius: 8px;
+
+    ul {
+      padding: 0;
+      margin: 0;
+
+      li {
+        padding: 8px 9px;
+      }
     }
   }
-}
 
 }
+
 .modal {
   &__container {
     width: 720px;
@@ -356,7 +384,7 @@ input, textarea, select {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background:#fff;
+    background: #fff;
     border-radius: 8px;
   }
 
@@ -392,18 +420,22 @@ input, textarea, select {
     //  cursor: pointer;
     //}
   }
+
   &-title {
     margin: 0;
     line-height: 1.42857143;
     text-align: center;
   }
-  &-body{
+
+  &-body {
     padding: 25px;
     position: relative;
   }
+
   &-header {
     padding: 20px 25px;
     border-bottom: 1px solid #f2f2f0;
+
     .close {
       text-transform: uppercase;
       width: 50px;
@@ -412,7 +444,7 @@ input, textarea, select {
       border-radius: 5px;
       position: absolute;
       left: 50%;
-      margin: 0 0 0 -25px!important;
+      margin: 0 0 0 -25px !important;
       top: -83px;
       cursor: pointer;
       -webkit-transition: all .2s ease;
@@ -423,23 +455,26 @@ input, textarea, select {
       line-height: 40px;
       padding: 0;
     }
+
     button:hover, button.active, .btn:hover, input[type="button"].btn:hover, .btn.active {
       box-shadow: 0 5px 30px -10px #ff742e;
     }
   }
-  &-city{
+
+  &-city {
     &__container {
-    min-height: 260px;
+      min-height: 260px;
     }
   }
-  &-bag{
 
-    &__container{
+  &-bag {
+
+    &__container {
       left: auto;
       right: 0;
       top: 0;
       transform: none;
-     height: 100vh;
+      height: 100vh;
       max-width: 325px;
       border-radius: 0;
       padding: 90px 0 18px;
@@ -450,9 +485,10 @@ input, textarea, select {
   }
 
 }
-.cart{
-  &-popup{
-    &__top{
+
+.cart {
+  &-popup {
+    &__top {
       padding: 15px 18px 0;
       display: flex;
       align-items: center;
@@ -462,6 +498,7 @@ input, textarea, select {
       left: 0;
       width: 100%;
     }
+
     &__close {
       background-color: #f4f4f4;
       border-radius: 5px;
@@ -476,18 +513,22 @@ input, textarea, select {
       display: flex;
       align-items: center;
       justify-content: center;
-      svg{
+
+      svg {
         width: 7px;
         height: 10px;
       }
-      &:hover{
+
+      &:hover {
         background: #ff742e;
-          box-shadow: 0 5px 30px -10px #ff742e;
-        svg{
+        box-shadow: 0 5px 30px -10px #ff742e;
+
+        svg {
           fill: #fff;
         }
       }
     }
+
     &__title {
       font-size: 25px;
       font-weight: 300;
@@ -495,48 +536,56 @@ input, textarea, select {
       text-align: left;
       padding: 10px 0;
     }
+
     &_bottom {
       height: 100%;
       overflow: auto;
     }
+
     &__discount {
       display: block;
       color: #9b9b9b;
       line-height: 16px;
       padding: 0 0 35px 0;
     }
+
     .scroll-container {
       padding: 24px 18px 15px 0;
     }
   }
 }
 
- .prmn-cmngr-cities{
-   &__search{
-     &-block{
-       margin-bottom: 15px;
-     }
-     &-label{
-       font-size: 15px;
-       font-weight: 500;
-     }
-     &-list{
-       display: flex;
-       flex-wrap: wrap;
-     }
-     &-item{
-       max-width: 33.3333%;
-       width: 100%;
-       margin-bottom: 5px;
-       .prmn-cmngr-cities__city-name{
-         cursor: pointer;
-         color: #fc6519;
-         font-size: 14px;
-         transition: var(--transition);
-         &:hover{
-           text-decoration: underline;
-         }
-       }
-     }
-   }
- }
+.prmn-cmngr-cities {
+  &__search {
+    &-block {
+      margin-bottom: 15px;
+    }
+
+    &-label {
+      font-size: 15px;
+      font-weight: 500;
+    }
+
+    &-list {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    &-item {
+      max-width: 33.3333%;
+      width: 100%;
+      margin-bottom: 5px;
+
+      .prmn-cmngr-cities__city-name {
+        cursor: pointer;
+        color: #fc6519;
+        font-size: 14px;
+        transition: var(--transition);
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
