--- a/src/scss/blocks/advantages.scss
+++ b/src/scss/blocks/advantages.scss
@@ -6,11 +6,22 @@
 &-list{
   display: flex;
   justify-content: space-between;
+  @media screen and (max-width: 767px) {
+    align-items: center;
+    flex-direction: column;
+
+  }
 }
   &-item{
     max-width: 292px;
     width: 100%;
     text-align: center;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+      &:nth-last-child(1){
+        margin-bottom: 0;
+      }
+    }
     img{
       width: 64px;
       height: 64px;
