--- a/src/scss/blocks/categories.scss
+++ b/src/scss/blocks/categories.scss
@@ -7,6 +7,14 @@
     grid-template-rows: repeat(2, 260px);
     gap: 1px;
     padding: 0;
+ @media screen and (max-width: 1023px) {
+   grid-template-columns: repeat(2, 1fr);
+   grid-template-rows: repeat(4, 303px);
+ }
+    @media screen and (max-width: 767px) {
+      grid-template-rows: repeat(4, 168px);
+
+    }
   }
   &-link{
     position: relative;
@@ -34,6 +42,10 @@
       border-radius: 0 8px 0 0;
       color: #a38c76;
       z-index: 2;
+      @media screen and (max-width: 767px) {
+        font-size: 15px;
+        padding: 10px 10px 40px 10px;
+      }
     }
   }
   &-item{
@@ -68,7 +80,13 @@
     }
     &-4{
       grid-column: 3/5;
-      grid-row: 1/2;    }
+      grid-row: 1/2;
+      @media screen and (max-width: 1023px) {
+        grid-row: 3/4;
+        grid-column: 1/2;
+
+      }
+    }
     &-5{}
     &-6{}
   }
