--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -306,6 +306,9 @@
       //margin-left: 16px;
       font-size: 12px;
       letter-spacing: -0.6px;
+      @media screen and (max-width: 1100px) {
+        display: none;
+      }
     }
   }
 
@@ -561,6 +564,64 @@
         }
       }
 
+    }
+  }
+
+  &-desktop{
+    @media screen and (max-width: 1023px) {
+      display: none;
+
+    }
+  }
+  &-mobile{
+    display: none;
+    padding: 15px 0;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.06);
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 9;
+    @media screen and (max-width: 1023px) {
+      display: block;
+
+    }
+    &__logo{
+      font-size: 14px;
+      line-height: 17px;
+    }
+    &__burger{
+      display: flex;
+      align-items: center;
+    }
+    &__inner{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    &__left{
+      display: flex;
+      align-items: center;
+    }
+    &__burger{
+      margin-right: 16px;
+    }
+    &__right{}
+    &__icon{
+      &-list{
+        padding: 0;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        list-style: none;
+      }
+      &-item{
+        margin: 0 8px;
+        svg{
+          width: 24px;
+          height: 24px;
+        }
+      }
     }
   }
 }
