--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,10 +43,11 @@ button {
   border: none;
   outline: none;
 }
+
 input{
   outline: none;
-
 }
+
 input, textarea, select {
   background: #fff;
   border: 1px solid #d6d6d6;
@@ -104,6 +105,9 @@ input, textarea, select {
       vertical-align: middle;
       line-height: 30px;
       padding: 0 25px 0 0;
+      @media screen and (max-width: 767px) {
+        font-size: 28px;
+      }
 
       &:after {
         content: '\\';
@@ -181,7 +185,9 @@ input, textarea, select {
     padding: 25px 30px;
     border-left: 1px solid #ededed;
     order: 1;
-
+@media screen and (max-width: 1023px) {
+  width: 100%;
+}
     svg {
       vertical-align: middle;
       position: relative;
@@ -381,7 +387,8 @@ input, textarea, select {
 
 .modal {
   &__container {
-    width: 720px;
+    max-width: 720px;
+    width: calc(100% - 20px);
     min-height: 573px;
     position: fixed;
     top: 50%;
@@ -471,7 +478,10 @@ input, textarea, select {
   }
 
   &-bag {
-
+    .header-call__button-content{
+      display: block !important;
+      padding-top: 0;
+    }
     &__container {
       left: auto;
       right: 0;
@@ -486,7 +496,64 @@ input, textarea, select {
       overflow: hidden;
     }
   }
-
+  &-call{
+    &__container{
+      left: 0;
+      right: auto;
+    }
+  }
+  &-category{
+    &__container {
+      padding-top: 20px;
+      text-align: left;
+      .header-phone{
+        color: #000;
+      }
+      .header-phones{
+        padding-bottom: 75px;
+      }
+    }
+    .cart-popup__top{
+      justify-content: space-between;
+      top: 70px;
+    }
+    .close{
+      margin: 0;
+      svg{
+        transform: rotate(180deg);
+      }
+    }
+  }
+  &-auth{
+    &__container{
+  max-width: 500px;
+      width: 100%;
+    }
+    .jq-selectbox{
+      text-align: left;
+    }
+    .account__col{
+      border-top: 1px solid #ededed;
+      &:nth-child(1){
+        border-top: 0;
+      }
+    }
+  }
+  &-search{
+    .form-group{
+      position: relative;
+    }
+    button{
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      svg{
+        width: 16px;
+        height: 16px;
+      }
+    }
+  }
 }
 
 .cart {
