--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -665,3 +665,114 @@ input, textarea, select {
 .hidden{
   display: none;
 }
+
+@media screen and (max-width: 1023px) {
+  .popup__submenu-scroll {
+    height: calc(100% - 65px);
+    overflow: auto;
+  }
+}
+
+.nav-submenu{
+  @media screen and (max-width: 1023px) {
+    padding: 10px 25px 0;
+    max-width: 325px;
+    width: 100%;
+    position: relative;
+    &__list {
+      background: #fff;
+      width: 100%;
+      padding: 0 0 20px;
+      list-style: none;
+      color: #fc6519;
+      &-item{
+        display: block;
+        width: 100%;
+      }
+    }
+    &__item {
+      display: block;
+      width: 100%;
+      & > span {
+        display: flex;
+        justify-content: space-between;
+      }
+      svg {
+        display: block;
+        float: right;
+        fill: rgba(52, 52, 52, 0.5);
+        margin: 2px 10px 0 0;
+        width: 7px;
+        height: 10px;
+      }
+      .nav-submenu__list {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translateX(-100%);
+        z-index: 2;
+        transition: all .2s ease;
+        min-height: 100%;
+        padding: 0 0 20px 0;
+        display: block;
+        width: 100%;
+        background: #fff;
+        &.active {
+          transform: translateX(0);
+        }
+      }
+      .nav-submenu__list-item {
+        padding: 0 25px 0;
+        .nav-submenu__link.nav-submenu__title.js-submenu-link svg{
+          display: none;
+        }
+        .nav-submenu__list {
+          position: relative;
+          transform: translateX(0);
+          .nav-submenu__list-item--title{
+            display: none;
+          }
+           .nav-submenu__link{
+             padding-bottom: 15px;
+             color: #343434;
+             font-size: 13px;
+             font-weight: normal;
+           }
+        }
+        &.nav-submenu__list-item--title{
+          color: #343434;
+          display: flex;
+          align-items: center;
+          font-size: 16px;
+          svg {
+            vertical-align: middle;
+            margin: -2px 16px 0 0;
+          }
+        }
+      }
+    }
+    &__link {
+      font-weight: bold;
+      font-size: 14px;
+      display: block;
+      line-height: 15px;
+      border: none;
+      padding: 0 0 25px;
+
+    }
+    &-about {
+      display: block;
+      padding: 20px 0 15px;
+      border-top: 1px solid #e6e6e6;
+      width: auto;
+      max-width: none;
+    }
+  }
+}
+
+.popup__submenu-scroll ul.nav-submenu__list ul.nav-submenu__list>li .icon-chevron-right {
+  display: none;
+}
+.popup__submenu-scroll .nav-submenu__item .nav-submenu__list-item--title{
+  padding-bottom: 21px;
+}
