--- a/src/scss/blocks/homeSlider.scss
+++ b/src/scss/blocks/homeSlider.scss
@@ -49,7 +49,13 @@
       min-height: 390px;
     }
   }
-
+&__content-inner{
+  @media screen and (max-width: 767px) {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+  }
+}
   &__img {
     position: absolute;
     width: 100%;
@@ -64,6 +70,7 @@
     @media screen and (max-width: 767px) {
       &-mobile{
         display: block;
+        left: 0;
       }
       &-desktop{
         display: none;
@@ -97,9 +104,9 @@
     @media screen and (max-width: 767px) {
       font-size: 20px;
       line-height: 30px;
-      float: right;
       margin-top: 5px;
       margin-bottom: 0;
+      padding-left: 20px;
 
     }
   }
@@ -121,7 +128,6 @@
       font-size: 16px;
       line-height: 20px;
       max-width: 136px;
-      float: left;
     }
   }
 }
