--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -73,15 +73,17 @@
       font-size: 12.7px;
       position: relative;
       transition: 0.2s ease-in-out;
+@media screen and (max-width: 767px) {
+  &.active {
+    color: #FC6519;
 
-      &.active {
-        color: #FC6519;
+    span {
+      fill: #FC6519;
+      transform: translateY(-50%) rotate(180deg);
+    }
+  }
+}
 
-        span {
-          fill: #FC6519;
-          transform: translateY(-50%) rotate(180deg);
-        }
-      }
 
       span {
         display: none;
@@ -194,7 +196,7 @@
   &-phone {
     text-align: center;
     @media screen and (max-width: 767px) {
-      order: 3;
+      order: 4;
     }
 
     a {
@@ -241,7 +243,7 @@
     }
 
     @media screen and (max-width: 767px) {
-      order: 4;
+      order: 5;
       font-size: 20px;
     }
   }
@@ -267,7 +269,10 @@
     }
 
     @media screen and (max-width: 767px) {
-      display: none;
+      order: 3;
+      margin-bottom: 10px;
+      margin-top: 0;
+      //display: none;
     }
   }
 
