--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -500,6 +500,36 @@ input, textarea, select {
       left: 0;
       right: auto;
     }
+    &1{
+      @media screen and (min-width: 1024px) {
+        display: none !important;
+      }
+      background: transparent;
+      z-index: 2;
+      .close{
+        position: absolute;
+        top: 15px;
+        right: 15px;
+      }
+      .cart-popup_bottom.js-cart-bottom{
+        display: flex;
+        justify-content: center;
+      }
+      .header-call__button-content{
+        padding: 40px 0;
+        max-width: 350px;
+        margin: 0;
+      }
+      &__container {
+        height: auto;
+        min-height: 180px;
+      max-width: 100%;
+        width: 100%;
+        top: 62px;
+        padding: 0;
+        transform: unset;
+      }
+    }
   }
   &-category{
     &__container {
@@ -774,4 +804,38 @@ input, textarea, select {
 }
 .popup__submenu-scroll .nav-submenu__item .nav-submenu__list-item--title{
   padding-bottom: 21px;
+}
+
+.call-btn{
+  background: #FFFFFF;
+  border: 1px solid #EA6E34;
+  border-radius: 4px;
+  padding: 8px 12px;
+  margin-bottom: 16px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #EA6E34;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  &:nth-last-child(1){
+    margin-bottom: 0;
+  }
+  svg{
+    margin-right: 8px;
+    min-width: 24px;
+    min-height: 24px;
+  }
+  &:hover{
+    color: #EA6E34  ;
+  }
+  &__phone{
+    background: #EA6E34;
+    color: #FFFFFF;
+    &:hover{
+      color: #FFFFFF;
+    }
+  }
 }
