--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,11 +16,17 @@
 //@import "default/forms";
 //@import "default/text-animation";
 //
-*:focus {outline:none}
 a{
   all: unset;
-  outline: none;
   color: inherit;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  outline: none !important;
   &,&:active {
     background-color: inherit ;
   }
