--- a/src/scss/blocks/products.scss
+++ b/src/scss/blocks/products.scss
@@ -111,10 +111,8 @@
       margin: 30px auto 18px;
       display: flex;
       @media screen and (max-width: 767px) {
-        height: 220px;
-        padding-top: 35px;
-        padding-bottom: 25px;
-        margin: 0 auto;
+        height: 140px;
+        margin: 35px auto 25px;
       }
       img {
         max-width: 100%;
