--- a/src/scss/default/_reset.scss
+++ b/src/scss/default/_reset.scss
@@ -53,7 +53,7 @@ a:focus,
 a:active {
 	text-decoration: none;
 	outline: none;
-	color: var(--color-primary);
+	//color: var(--color-primary);
 }
 
 a:focus {
