--- a/src/scss/_filter.scss
+++ b/src/scss/_filter.scss
@@ -1,9 +1,10 @@
-.filter{
+.filter {
   &-tags {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    &-item{
+
+    &-item {
       border-radius: 5px;
       margin: 0 10px 10px 0;
       padding: 5px 10px;
@@ -11,52 +12,62 @@
       border: 1px solid #FC6519;
       transition: var(--transition);
       cursor: pointer;
-      &:hover{
+
+      &:hover {
         border-color: rgba(255, 116, 46, 0.3);
       }
     }
   }
-  &s{
 
+  &s {
+    margin-bottom: 40px;
   }
-  &-header{
+
+  &-header {
     display: flex;
     align-items: center;
     font-size: 20px;
     line-height: 1.2;
     margin-bottom: 15px;
-    svg{
+
+    svg {
       margin-right: 10px;
     }
   }
-  &-popular{
+
+  &-popular {
     margin-bottom: 15px;
     padding: 15px 20px;
     border-radius: 5px;
-    background-color: #fff!important;
-    box-shadow: 0 3px 15px rgba(0,0,0,0.12);
-    &__header{
+    background-color: #fff !important;
+    box-shadow: 0 3px 15px rgba(0, 0, 0, 0.12);
+
+    &__header {
       color: #444;
       margin-bottom: 15px;
       font-size: 14px;
       font-weight: 600;
     }
-    &__list{
+
+    &__list {
       margin: 0;
       padding: 0;
       list-style: none;
     }
-    &__item{
+
+    &__item {
       display: block;
       line-height: 1.5;
       margin-bottom: 5px;
       color: #4A5057;
       font-size: 13px;
     }
-    &__link{
+
+    &__link {
       color: #4A5057;
       position: relative;
-      &:before{
+
+      &:before {
         content: '';
         position: absolute;
         height: 1px;
@@ -66,73 +77,89 @@
         bottom: 0;
         transition: var(--transition);
       }
-      &:hover{
-        &::before{
+
+      &:hover {
+        &::before {
           width: 100%;
         }
       }
     }
   }
-  &-sort{
+
+  &-sort {
     background-color: #E8E8E8;
     padding: 8px 16px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    &__left{
+
+    &__left {
       display: flex;
     }
-    &__name{
+
+    &__name {
       margin-right: 12px;
       font-size: 14px;
       color: #5B5A61;
     }
-    &__list{
+
+    &__list {
       display: flex;
       align-items: center;
       list-style: none;
       margin: 0;
       padding: 0;
     }
-    &__item{
+
+    &__item {
       margin: 0 6px;
-      &:nth-child(1){
+
+      &:nth-child(1) {
         margin-left: 0;
       }
-      &:nth-last-child(1){
+
+      &:nth-last-child(1) {
         margin-right: 0;
       }
     }
-    &__link{
+
+    &__link {
       border-bottom: 1px dashed #9E9E9E;
       font-size: 13px;
       white-space: nowrap;
       transition: var(--transition);
-      &:hover{
+
+      &:hover {
         border-bottom: 1px dashed #000;
         color: #000;
       }
-      &.active{
+
+      &.active {
         border-bottom: 1px dashed #000;
         font-weight: 600;
         color: #000;
       }
     }
-    &__group{
-      &-list{
+
+    &__group {
+      &-list {
         margin: 0;
         padding: 0;
         list-style: none;
         display: flex;
         align-items: center;
       }
-      &-item{
+
+      &-item {
         margin-left: 5px;
-        &:nth-child(1){
+        cursor: pointer;
+
+        &:nth-child(1) {
           margin-left: 0;
         }
       }
-      &-link{
+
+      &-link {
         display: block;
         height: 35px;
         width: 45px;
@@ -140,12 +167,14 @@
         border: 1px solid #F2F2F0;
         color: #A9A9A9;
         position: relative;
-        &.active{
+
+        &.active {
           background-color: #fff;
           border: 1px solid #A9A9A9;
           color: #343434;
         }
-        &::before,&::after{
+
+        &::before, &::after {
           content: '';
           position: absolute;
           color: #343434;
@@ -155,41 +184,279 @@
           height: 3px;
           width: 3px;
         }
+
         &--5 {
-          &::before,&::after{
+          &::before, &::after {
             left: 14px;
           }
-          &::before{
+
+          &::before {
             top: 10px;
             box-shadow: 6px 0 0 0 #343434, 12px 0 0 0 #343434, 18px 0 0 0 #343434;
           }
-          &:after{
+
+          &:after {
             bottom: 10px;
             box-shadow: 6px 0 0 0 #343434, 12px 0 0 0 #343434, 18px 0 0 0 #343434;
           }
         }
+
         &--1 {
-          &::before{
+          &::before {
             top: 10px;
-            box-shadow:  5px 0 0 0 #343434, 10px 0 0 0 #343434, -5px 0 0 0 #343434, -10px 0 0 0 #343434;
+            box-shadow: 5px 0 0 0 #343434, 10px 0 0 0 #343434, -5px 0 0 0 #343434, -10px 0 0 0 #343434;
           }
-          &:after{
+
+          &:after {
             bottom: 10px;
             box-shadow: 5px 0 0 0 #343434, 10px 0 0 0 #343434, -5px 0 0 0 #343434, -10px 0 0 0 #343434;
           }
         }
+
         &--3 {
 
-          &::before{
+          &::before {
             top: 10px;
             box-shadow: 8px 0 0 0 #343434, -8px 0 0 0 #343434;
           }
-          &:after{
+
+          &:after {
             bottom: 10px;
             box-shadow: 8px 0 0 0 #343434, -8px 0 0 0 #343434;
           }
         }
       }
+    }
+  }
+
+  &-item {
+    margin-bottom: 15px;
+    padding: 15px 20px;
+    border-radius: 5px;
+    background-color: #f0f2f5;
+
+    &__dropdown {
+      .filter-item__body {
+        background-color: #fff;
+        padding: 55px 15px 15px;
+        position: absolute;
+        top: 0;
+        left: -3px;
+        right: -3px;
+        z-index: 20;
+        display: none;
+        min-width: 100%;
+        box-shadow: 0 5px 17px rgb(0 0 0 / 15%);
+        border-radius: 5px;
+        margin: -15px -17px 0;
+      }
+
+      .filter-item__header {
+        z-index: 21;
+        position: relative;
+      }
+    }
+
+    &__open {
+      background-color: #fff;
+      position: relative;
+      z-index: 30;
+
+      .filter-item__body {
+        display: block;
+      }
+    }
+
+    &__header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      cursor: pointer;
+    }
+
+    &__name {
+      color: #444;
+      margin-right: 5px;
+      font-size: 14px;
+      font-weight: 600;
+    }
+
+    &__arrow {
+      background-image: url(/img/arrow.svg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      width: 10px;
+      height: 10px;
+    }
+
+    &__inner {
+      position: relative;
+    }
+
+    &__list {
+      margin: 0;
+      list-style: none;
+      max-height: 200px;
+      overflow-y: auto;
+      margin: 0 -10px -15px -20px;
+      padding: 0 20px 15px;
+
+      &::-webkit-scrollbar {
+        width: 2px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: #3F67D8;
+        border-radius: 10px;
+      }
+
+      &-2 {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        .filter-item__list-item {
+          width: 49%;
+        }
+      }
+
+      &-item {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        &__label {
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+
+          &.disabled {
+            cursor: not-allowed;
+          }
+
+          input {
+            display: none;
+
+            &:checked + .filter-item__list-item__input {
+              &::before {
+                color: #fff;
+                border-color: #3366D5;
+              }
+
+              &::after {
+                background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
+              }
+            }
+
+            &:disabled + .filter-item__list-item__input {
+              &::before {
+                background-color: #eceef2;
+              }
+            }
+          }
+        }
+
+        &__input {
+          display: block;
+          width: 16px;
+          height: 16px;
+          margin-right: 10px;
+          position: relative;
+
+          &::after,
+          &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: block;
+            width: 100%;
+            height: 100%;
+          }
+
+          &::before {
+            pointer-events: none;
+            background-color: #fff;
+            box-sizing: border-box;
+            border: #adb5bd solid 1px;
+            transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+          }
+
+          &:after {
+            background-repeat: no-repeat;
+            background-position: center;
+            filter: invert(46%) sepia(39%) saturate(589%) hue-rotate(151deg) brightness(100%) contrast(88%);
+            background-size: 10px;
+          }
+        }
+
+        &__text {
+          margin-right: 5px;
+          word-break: break-word;
+          text-align: left;
+          font-size: 13px;
+        }
+
+        &__append {
+          text-align: center;
+          font-size: 11px;
+          line-height: 1.5;
+          background-color: rgb(79 83 88 / 10%);
+          border-radius: 50px;
+          color: #46494e;
+          padding: 2px 10px;
+        }
+      }
+    }
+  }
+
+  &-footer {
+    position: sticky;
+    bottom: 0;
+    z-index: 30;
+    margin: 15px -10px 0;
+    padding: 10px;
+    background-color: #fff;
+    box-shadow: 0 -10px 10px 0 #fff;
+
+    &__inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &__link {
+      display: inline-block;
+      padding: 6px 12px;
+      margin-bottom: 0;
+      font-size: 14px;
+      line-height: 1.42857143;
+      text-align: center;
+      white-space: nowrap;
+      cursor: pointer;
+      border: 0;
+      background-color: transparent;
+      color: #337ab7;
+      border-radius: 0;
+    }
+
+    &__search {
+      display: inline-block;
+      padding: 6px 12px;
+      margin-bottom: 0;
+      font-size: 14px;
+      line-height: 1.42857143;
+      text-align: center;
+      white-space: nowrap;
+      cursor: pointer;
+      border: 0;
+      border-radius: 4px;
+      background-color: #6a7275;
+      color: #fff;
+      padding-top: 9px;
+      padding-bottom: 9px;
     }
   }
 }
