--- a/src/scss/blocks/products.scss
+++ b/src/scss/blocks/products.scss
@@ -1,5 +1,7 @@
 .products {
   margin: 62px 0 58px;
+
+
   @media screen and (max-width: 1000px) {
     .wrapper{
       padding: 0;
@@ -11,6 +13,11 @@
   &-inner {
     ul{
       padding: 0;
+    }
+    &-p{
+      border-left: 1px solid #f2f2f0;
+      padding: 15px;
+      flex: 1;
     }
   }
   &-title{
@@ -30,7 +37,66 @@
     //list-style: none;
     //padding: 0;
     //border-left: 1px solid #f2f2f0;
+&__grid{
+  display: grid;
+  gap: 15px;
+  &-4{
+    grid-template-columns: repeat(4,1fr);
+  }
+  &-3{
+    grid-template-columns: repeat(3,1fr);
+  }
+  .products-item__price{
+    font-weight: 400;
+    span{
+      font-weight: 600;
+    }
+  }
+  .products-list__btns-item{
+    display: flex;
+    justify-content: space-between;
+    .btn{
+      text-align: center;
+      font-weight: 500;
+      line-height: 1;
+      text-transform: uppercase;
+      background: #fc6519;
+      color: #fff;
+      outline: none;
+      border-radius: 8px;
+      position: relative;
+      transition: all .3s ease-in-out;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-family: "Montserrat", Arial, Helvetica, sans-serif;
+      padding: 10px 5px;
+      height: 39px;
+      font-size: 12px;
+      border: 1px solid #fc6519;
+    }
+    .btn--transparent{
+      background-color: transparent;
+      color: #fc6519;
+      transition: var(--transition);
+      &:hover{
+        background: #fc6519;
+        color: #fff;
+      }
+    }
+    .btn{
+      font-size: 11px;
+      letter-spacing: 0;
+      max-width: 48%;
+      width: 100%;
+    }
 
+  }
+  .products-item{
+    padding-bottom: 15px;
+    border-radius: 8px;
+  }
+}
 .swiper-buttons{
   display: none;
   @media screen and (max-width: 767px) {
@@ -63,10 +129,14 @@
     width: 100%;
     position: relative;
     border: 1px solid #f2f2f0;
-    border-left: 0;
-    padding: 0 20px 0 15px;
+    padding: 0  15px;
     text-align: center;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    &__inner{
+      flex: 1;
+    }
     img{
       transition: var(--transition);
       z-index: -1;
