--- a/src/scss/_filter.scss
+++ b/src/scss/_filter.scss
@@ -22,7 +22,62 @@
   &s {
     margin-bottom: 40px;
   }
+&__slider{
+  background-color: #f0f2f5;
+  margin-bottom: 15px;
+  padding: 15px 20px;
+  border-radius: 5px;
+  #slider-range {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
+  .ui-slider .ui-slider-handle {
+    top: -7px;
+    width: 24px;
+    height: 24px;
+  }
+  .ui-slider-horizontal .ui-slider-range {
+    top: auto;
+    height: 4px;
+  }
+  .ui-slider .ui-slider-range {
+    background: #3366d5;
+  }
+
+  .ui-slider-horizontal .ui-slider-handle {
+    background: #3366d5;
+    border: 2px solid #fff;
+    border-radius: 50%;
+  }
+  input.ui-state-hover {
+    border-color: #3366d5 !important;
+    color: #999;
+    background: #fdfdfd;
+  }
+  .filter-item__name{
+    margin-bottom: 10px;
+    display: block;
+  }
+  &-inner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #DEE2E6;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1;
+    color: #555;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-bottom: 20px;
+  }
+
+  &-null{
+    padding: 6px 12px;
+  }
+}
   &-header {
     display: flex;
     align-items: center;
